fixed side panel not showing up with z-index larger than the ones leaflet uses internally https://leafletjs.com/reference-1.7.1.html#map-popuppane

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -41,7 +41,7 @@ input[type=submit] {
     position: fixed;
     width: 40%;
     height: 100vh;
-    z-index: 2;
+    z-index: 800;
     padding: 1em;
     background-color: white;
     
